[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/factory/Factory.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/factory/Coal_Factory.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Coal_Factory" instance=ExtResource( 1 )]
z_index = -1
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
visible = false

[node name="CollisionShape2D" parent="." index="2"]
visible = false

[node name="Area2D" type="Area2D" parent="." index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
